--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@ldapjs/messages",
   "homepage": "https://github.com/ldapjs/messages",
   "description": "API for creating and parsing LDAP messages",
-  "version": "1.3.0",
+  "version": "1.3.0-patched",
   "license": "MIT",
   "repository": {
     "type": "git",
